# mcp-server-searxng

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NEXT_SESSION_BRIEF.md  PHASE_3_SUMMARY.md  PRE_FLIGHT_CHECKLIST.md  QUICKSTART.md  README.md  RETEST_INSTRUCTIONS.md  TESTING.md  USER_TESTING_REQUIRED.md  extension.toml  package.json
.github/: dependabot.yml
.github/workflows/: security-audit.yml
configuration/: default_settings.jsonc  installation_instructions.md
security_review/: REVIEW_SUMMARY.md
src/: lib.rs  mcp_server_searxng.rs
